CSS MOVIL mas CORRECCION DE ENCLACES

--- a/Servicios/fibra-optica-empresas.html
+++ b/Servicios/fibra-optica-empresas.html
@@ -196,7 +196,7 @@
                                  <li><strong>Tendido Profesional:</strong> Instalación interior y exterior adaptada a su edificio.</li>
                                  <li><strong>Fusión de Fibra Óptica:</strong> Empalmes de precisión para mínima pérdida de señal.</li>
                                  <li><strong>Mediciones OTDR:</strong> Verificación y certificación de la calidad de la instalación.</li>
-                                 <li><strong>Integración con Red Existente:</strong> Conexión fluida con su <a href="/Servicios/infraestructura-telecom.html">infraestructura de red</a>.</li>
+                                 <li><strong>Integración con Red Existente:</strong> Conexión fluida con su <a href="infraestructura-telecom.html">infraestructura de red</a>.</li>
                                  <li><strong>Tipos de Fibra:</strong> Monomodo (largas distancias) y Multimodo (edificios).</li>
                              </ul>
                          </div>
@@ -265,7 +265,7 @@
                              <ul>
                                  <li><strong>Monitorización Proactiva:</strong> Supervisión constante para detectar posibles incidencias.</li>
                                  <li><strong>Asistencia Técnica Rápida:</strong> Nuestro equipo en Almería para resolver averías.</li>
-                                 <li><strong><a href="Servicios/mantenimiento-redes.html">Planes de Mantenimiento:</a></strong> Revisiones periódicas preventivas.</li>
+                                 <li><strong><a href="mantenimiento-redes.html">Planes de Mantenimiento:</a></strong> Revisiones periódicas preventivas.</li>
                                  <li><strong>Actualizaciones y Mejoras:</strong> Mantenemos su red al día con los últimos avances.</li>
                              </ul>
                         </div>
@@ -362,7 +362,7 @@
                      <div class="faq-item">
                         <input type="checkbox" id="faq-f4" class="faq-toggle">
                         <label for="faq-f4" class="faq-question">¿Qué pasa si la fibra óptica no llega exactamente a mi polígono/nave/finca?</label>
-                        <div class="faq-answer"><div class="faq-answer-content"><p>Evaluamos cada caso. Si la fibra troncal está cerca, podemos estudiar un proyecto de extensión. Si no es viable, SATEKOR ofrece alternativas de alta velocidad como <strong><a href="/Servicios/internet-rural.html">radioenlaces dedicados o soluciones 4G/5G profesionales</a></strong> para garantizar la mejor conectividad posible en su ubicación en Almería.</p></div></div>
+                        <div class="faq-answer"><div class="faq-answer-content"><p>Evaluamos cada caso. Si la fibra troncal está cerca, podemos estudiar un proyecto de extensión. Si no es viable, SATEKOR ofrece alternativas de alta velocidad como <strong><a href="internet-rural.html">radioenlaces dedicados o soluciones 4G/5G profesionales</a></strong> para garantizar la mejor conectividad posible en su ubicación en Almería.</p></div></div>
                     </div>
                 </div>
                  <script type="application/ld+json">{ "@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [ { "@type": "Question", "name": "¿Qué diferencia hay entre la fibra óptica y el ADSL/Cable Coaxial?", "acceptedAnswer": { "@type": "Answer", "text": "La fibra óptica usa luz por vidrio (mayor velocidad simétrica, baja latencia, estabilidad). ADSL usa cobre telefónico (más lento, sensible a distancia). Cable Coaxial (HFC) es intermedio, pero con subida inferior a fibra y posible congestión." } }, { "@type": "Question", "name": "¿Qué velocidades reales puedo esperar con la fibra óptica de SATEKOR en Almería?", "acceptedAnswer": { "@type": "Answer", "text": "Ofrecemos velocidades simétricas desde 300 Mbps hasta 1 Gbps o más bajo demanda (fibra dedicada). Garantizamos el rendimiento contratado con pruebas post-instalación." } }, { "@type": "Question", "name": "¿La instalación de fibra óptica en mi oficina será muy molesta?", "acceptedAnswer": { "@type": "Answer", "text": "Planificamos para minimizar molestias. Nuestros técnicos son eficientes y limpios. Coordinamos el mejor momento para pasar el cable, instalar el PTR-O y conectar la ONT." } }, { "@type": "Question", "name": "¿Qué pasa si la fibra óptica no llega exactamente a mi negocio en Almería?", "acceptedAnswer": { "@type": "Answer", "text": "Evaluamos cada caso. Si la fibra está cerca, estudiamos extensión. Si no, ofrecemos alternativas de alta velocidad como radioenlaces dedicados o 4G/5G profesional. Ver nuestro servicio de Internet Rural." } } ] }</script>
@@ -388,23 +388,23 @@
                      <!-- Tarjeta Infraestructura -->
                      <article class="service-card related-card">
                         <i class="fas fa-server service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/infraestructura-telecom.html">Infraestructura Crítica</a></h3>
+                        <h3><a href="infraestructura-telecom.html">Infraestructura Crítica</a></h3>
                         <p>Asegure que su cableado interno, racks y red local estén a la altura de su conexión de fibra óptica.</p>
-                        <a href="Servicios/infraestructura-telecom.html" class="btn btn-small btn-secondary">Ver Infraestructura</a>
+                        <a href="infraestructura-telecom.html" class="btn btn-small btn-secondary">Ver Infraestructura</a>
                     </article>
                      <!-- Tarjeta Mantenimiento -->
                     <article class="service-card related-card">
                         <i class="fas fa-tools service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/mantenimiento-redes.html">Mantenimiento y Soporte</a></h3>
+                        <h3><a href="mantenimiento-redes.html">Mantenimiento y Soporte</a></h3>
                         <p>Mantenga su conexión de fibra y toda su red empresarial funcionando sin interrupciones.</p>
-                        <a href="Servicios/mantenimiento-redes.html" class="btn btn-small btn-secondary">Ver Mantenimiento</a>
+                        <a href="mantenimiento-redes.html" class="btn btn-small btn-secondary">Ver Mantenimiento</a>
                     </article>
                     <!-- Tarjeta Internet Rural -->
                     <article class="service-card related-card">
                         <i class="fas fa-satellite-dish service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/internet-rural.html">Internet Rural</a></h3>
+                        <h3><a href="internet-rural.html">Internet Rural</a></h3>
                         <p>Si la fibra no llega, exploramos las mejores alternativas de alta velocidad para su ubicación.</p>
-                        <a href="Servicios/internet-rural.html" class="btn btn-small btn-secondary">Ver Internet Rural</a>
+                        <a href="internet-rural.html" class="btn btn-small btn-secondary">Ver Internet Rural</a>
                     </article>
                 </div>
             </div>
