--- a/Servicios/internet-rural.html
+++ b/Servicios/internet-rural.html
@@ -366,21 +366,21 @@
                 <div class="service-grid">
                      <article class="service-card related-card">
                         <i class="fas fa-wifi service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/fibra-optica-empresas.html">Fibra Óptica (Si Aplica)</a></h3>
+                        <h3><a href="fibra-optica-empresas.html">Fibra Óptica (Si Aplica)</a></h3>
                         <p>Si la fibra está cerca de su zona, podemos estudiar la viabilidad de una extensión.</p>
-                        <a href="Servicios/fibra-optica-empresas.html" class="btn btn-small btn-secondary">Ver Fibra Óptica</a>
+                        <a href="fibra-optica-empresas.html" class="btn btn-small btn-secondary">Ver Fibra Óptica</a>
                     </article>
                     <article class="service-card related-card">
                         <i class="fas fa-tools service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/mantenimiento-redes.html">Mantenimiento de Red</a></h3>
+                        <h3><a href="mantenimiento-redes.html">Mantenimiento de Red</a></h3>
                         <p>Aseguramos el funcionamiento óptimo de su conexión rural y equipos de red.</p>
-                        <a href="Servicios/mantenimiento-redes.html" class="btn btn-small btn-secondary">Ver Mantenimiento</a>
+                        <a href="mantenimiento-redes.html" class="btn btn-small btn-secondary">Ver Mantenimiento</a>
                     </article>
                     <article class="service-card related-card">
                         <i class="fas fa-microchip service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/soluciones-iot.html">Soluciones IoT Rural</a></h3>
+                        <h3><a href="soluciones-iot.html">Soluciones IoT Rural</a></h3>
                         <p>Conecte sensores y automatice procesos en su explotación agrícola o negocio rural.</p>
-                        <a href="Servicios/soluciones-iot.html" class="btn btn-small btn-secondary">Ver Soluciones IoT</a>
+                        <a href="soluciones-iot.html" class="btn btn-small btn-secondary">Ver Soluciones IoT</a>
                     </article>
                 </div>
             </div>
