--- a/Servicios/mantenimiento-redes.html
+++ b/Servicios/mantenimiento-redes.html
@@ -367,21 +367,21 @@
                 <div class="service-grid">
                      <article class="service-card related-card">
                         <i class="fas fa-network-wired service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/infraestructura-telecom.html">Infraestructura Crítica</a></h3>
+                        <h3><a href="infraestructura-telecom.html">Infraestructura Crítica</a></h3>
                         <p>Una infraestructura robusta es la base, y nuestro mantenimiento la preserva.</p>
-                        <a href="Servicios/infraestructura-telecom.html" class="btn btn-small btn-secondary">Ver Infraestructura</a>
+                        <a href="infraestructura-telecom.html" class="btn btn-small btn-secondary">Ver Infraestructura</a>
                     </article>
                     <article class="service-card related-card">
                         <i class="fas fa-wifi service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/fibra-optica-empresas.html">Fibra Óptica Empresas</a></h3>
+                        <h3><a href="fibra-optica-empresas.html">Fibra Óptica Empresas</a></h3>
                         <p>Aseguramos el óptimo rendimiento de su conexión de fibra óptica con nuestro soporte.</p>
-                        <a href="Servicios/fibra-optica-empresas.html" class="btn btn-small btn-secondary">Ver Fibra Óptica</a>
+                        <a href="fibra-optica-empresas.html" class="btn btn-small btn-secondary">Ver Fibra Óptica</a>
                     </article>
                     <article class="service-card related-card">
                         <i class="fas fa-video service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/videovigilancia-empresas.html">Videovigilancia Empresas</a></h3>
+                        <h3><a href="videovigilancia-empresas.html">Videovigilancia Empresas</a></h3>
                         <p>Mantenga sus sistemas de seguridad siempre activos y funcionales con nuestro servicio.</p>
-                        <a href="Servicios/videovigilancia-empresas.html" class="btn btn-small btn-secondary">Ver Videovigilancia</a>
+                        <a href="videovigilancia-empresas.html" class="btn btn-small btn-secondary">Ver Videovigilancia</a>
                     </article>
                 </div>
             </div>
