--- a/Servicios/soluciones-iot.html
+++ b/Servicios/soluciones-iot.html
@@ -366,21 +366,21 @@
                 <div class="service-grid">
                      <article class="service-card related-card">
                         <i class="fas fa-network-wired service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/infraestructura-telecom.html">Infraestructura de Red</a></h3>
+                        <h3><a href="infraestructura-telecom.html">Infraestructura de Red</a></h3>
                         <p>Una red local robusta es clave para soportar sus gateways y dispositivos IoT conectados.</p>
-                        <a href="Servicios/infraestructura-telecom.html" class="btn btn-small btn-secondary">Ver Infraestructura</a>
+                        <a href="infraestructura-telecom.html" class="btn btn-small btn-secondary">Ver Infraestructura</a>
                     </article>
                     <article class="service-card related-card">
                         <i class="fas fa-wifi service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/fibra-optica-empresas.html">Fibra Óptica Empresas</a></h3>
+                        <h3><a href="fibra-optica-empresas.html">Fibra Óptica Empresas</a></h3>
                         <p>Asegure la conectividad de backhaul para sus gateways IoT con internet de alta velocidad.</p>
-                        <a href="Servicios/fibra-optica-empresas.html" class="btn btn-small btn-secondary">Ver Fibra Óptica</a>
+                        <a href="fibra-optica-empresas.html" class="btn btn-small btn-secondary">Ver Fibra Óptica</a>
                     </article>
                     <article class="service-card related-card">
                         <i class="fas fa-tools service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/mantenimiento-redes.html">Mantenimiento Integral</a></h3>
+                        <h3><a href="mantenimiento-redes.html">Mantenimiento Integral</a></h3>
                         <p>Ofrecemos soporte y mantenimiento para sus redes IoT y la infraestructura subyacente.</p>
-                        <a href="Servicios/mantenimiento-redes.html" class="btn btn-small btn-secondary">Ver Mantenimiento</a>
+                        <a href="mantenimiento-redes.html" class="btn btn-small btn-secondary">Ver Mantenimiento</a>
                     </article>
                 </div>
             </div>
