--- a/Servicios/videovigilancia-empresas.html
+++ b/Servicios/videovigilancia-empresas.html
@@ -231,7 +231,7 @@
                                  <li><strong>Estudio Previo Detallado:</strong> Analizamos sus instalaciones para un diseño óptimo.</li>
                                  <li><strong>Cableado Estructurado Profesional:</strong> Instalación limpia, ordenada y fiable.</li>
                                  <li><strong>Configuración Personalizada:</strong> Ajustamos cámaras, grabadores y software a sus necesidades.</li>
-                                 <li><strong><a href="/Servicios/mantenimiento-redes.html">Mantenimiento Preventivo y Correctivo:</a></strong> Planes para asegurar el funcionamiento continuo y resolver incidencias.</li>
+                                 <li><strong><a href="mantenimiento-redes.html">Mantenimiento Preventivo y Correctivo:</a></strong> Planes para asegurar el funcionamiento continuo y resolver incidencias.</li>
                              </ul>
                         </div>
                     </article>
@@ -266,7 +266,7 @@
                                  <li><strong>Integración con Alarmas:</strong> Conectamos su videovigilancia con sistemas de alarma existentes o nuevos.</li>
                                  <li><strong>Control de Accesos:</strong> Vinculación con sistemas de apertura de puertas o barreras.</li>
                                  <li><strong>Preparado para Crecer:</strong> Sistemas modulares que permiten añadir cámaras fácilmente.</li>
-                                 <li><strong>Compatibilidad IoT:</strong> Potencial integración con <a href="Servicios/soluciones-iot.html">soluciones de automatización</a>.</li>
+                                 <li><strong>Compatibilidad IoT:</strong> Potencial integración con <a href="soluciones-iot.html">soluciones de automatización</a>.</li>
                                  <li><strong>API y SDK (Avanzado):</strong> Posibilidades de integración con software de gestión propio.</li>
                              </ul>
                         </div>
@@ -386,21 +386,21 @@
                 <div class="service-grid"> <!-- Quitamos estilos inline -->
                      <article class="service-card related-card">
                         <i class="fas fa-tools service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/mantenimiento-redes.html">Mantenimiento y Soporte</a></h3>
+                        <h3><a href="mantenimiento-redes.html">Mantenimiento y Soporte</a></h3>
                         <p>Asegure el rendimiento continuo de su sistema de videovigilancia y redes con nuestros planes de mantenimiento.</p>
-                        <a href="Servicios/mantenimiento-redes.html" class="btn btn-small btn-secondary">Ver Mantenimiento</a>
+                        <a href="mantenimiento-redes.html" class="btn btn-small btn-secondary">Ver Mantenimiento</a>
                     </article>
                      <article class="service-card related-card">
                         <i class="fas fa-server service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/infraestructura-telecom.html">Infraestructura de Red</a></h3>
+                        <h3><a href="infraestructura-telecom.html">Infraestructura de Red</a></h3>
                         <p>Una base sólida con cableado estructurado y racks adecuados es esencial para su sistema de seguridad.</p>
-                        <a href="Servicios/infraestructura-telecom.html" class="btn btn-small btn-secondary">Ver Infraestructura</a>
+                        <a href="infraestructura-telecom.html" class="btn btn-small btn-secondary">Ver Infraestructura</a>
                     </article>
                     <article class="service-card related-card">
                         <i class="fas fa-microchip service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/soluciones-iot.html">Automatización / IoT</a></h3>
+                        <h3><a href="soluciones-iot.html">Automatización / IoT</a></h3>
                         <p>Integre sus cámaras con sensores y sistemas inteligentes para una seguridad y gestión más avanzadas.</p>
-                        <a href="Servicios/soluciones-iot.html" class="btn btn-small btn-secondary">Ver IoT</a>
+                        <a href="soluciones-iot.html" class="btn btn-small btn-secondary">Ver IoT</a>
                     </article>
                 </div>
             </div>
