--- a/Servicios/infraestructura-telecom.html
+++ b/Servicios/infraestructura-telecom.html
@@ -366,21 +366,21 @@
                 <div class="service-grid">
                      <article class="service-card related-card">
                         <i class="fas fa-wifi service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/fibra-optica-empresas.html">Fibra Óptica Empresas</a></h3>
+                        <h3><a href="fibra-optica-empresas.html">Fibra Óptica Empresas</a></h3>
                         <p>Conecte su infraestructura a la máxima velocidad con nuestras soluciones de fibra óptica.</p>
-                        <a href="Servicios/fibra-optica-empresas.html" class="btn btn-small btn-secondary">Ver Fibra Óptica</a>
+                        <a href="fibra-optica-empresas.html" class="btn btn-small btn-secondary">Ver Fibra Óptica</a>
                     </article>
                     <article class="service-card related-card">
                         <i class="fas fa-tools service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/mantenimiento-redes.html">Mantenimiento de Redes</a></h3>
+                        <h3><a href="mantenimiento-redes.html">Mantenimiento de Redes</a></h3>
                         <p>Mantenga su infraestructura y todos sus sistemas en perfecto estado con nuestro soporte experto.</p>
-                        <a href="Servicios/mantenimiento-redes.html" class="btn btn-small btn-secondary">Ver Mantenimiento</a>
+                        <a href="mantenimiento-redes.html" class="btn btn-small btn-secondary">Ver Mantenimiento</a>
                     </article>
                     <article class="service-card related-card">
                         <i class="fas fa-video service-icon" aria-hidden="true"></i>
-                        <h3><a href="Servicios/videovigilancia-empresas.html">Videovigilancia IP</a></h3>
+                        <h3><a href="videovigilancia-empresas.html">Videovigilancia IP</a></h3>
                         <p>Aproveche su infraestructura de red para implementar sistemas de seguridad avanzados.</p>
-                        <a href="Servicios/videovigilancia-empresas.html" class="btn btn-small btn-secondary">Ver Videovigilancia</a>
+                        <a href="videovigilancia-empresas.html" class="btn btn-small btn-secondary">Ver Videovigilancia</a>
                     </article>
                 </div>
             </div>
