--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <header class="site-header">
         <div class="container header-content">
             <!-- Logo SATEKOR -->
-            <a href="/" class="logo">
+            <a href="index.html" class="logo">
                 <img src="Assets/Imagenes/logoB.png" alt="Logo SATEKOR Telecomunicaciones Almería">
             </a>
             <!-- Botón Hamburguesa -->
