--- a/Servicios/infraestructura-telecom.html
+++ b/Servicios/infraestructura-telecom.html
@@ -148,7 +148,7 @@
                 <div class="hero-text-content">
                     <h1>Infraestructura de Red Robusta y Escalable en Almería</h1>
                     <p class="subtitle">SATEKOR construye la base sólida para sus comunicaciones empresariales: cableado estructurado de alto rendimiento, racks organizados y CPDs eficientes en Almería.</p>
-                    <a href="contacto.html?servicio=infraestructura" class="btn btn-primary">Evaluar Mi Infraestructura</a>
+                    <a href=".../contacto.html" class="btn btn-primary">Evaluar Mi Infraestructura</a>
                 </div>
             </div>
         </section>
@@ -355,7 +355,7 @@
             <div class="container">
                 <h2 class="section-title" style="color: var(--color-primary);">Construya la Base Tecnológica de su Empresa en Almería</h2>
                 <p class="subtitle" style="color: var(--color-text-primary);">Invierta en una infraestructura de telecomunicaciones profesional con SATEKOR y asegure el futuro digital de su negocio.</p>
-                <a href="contacto.html?servicio=infraestructura" class="btn btn-primary btn-large">Solicitar Auditoría de Red</a>
+                <a href="../contacto.html" class="btn btn-primary btn-large">Solicitar Auditoría de Red</a>
                 <p><a href="tel:+34642531300">O llámenos al <strong>642 53 13 00</strong></a></p>
             </div>
         </section>
@@ -395,10 +395,10 @@
     <footer class="site-footer">
          <div class="container footer-content">
             <p>© <span id="current-year"></span> SATEKOR Telecomunicaciones. Todos los derechos reservados.</p>
-            <nav class="footer-nav" aria-label="Navegación secundaria">
-                <a href="politica-privacidad.html">Política de Privacidad</a> |
-                <a href="terminos-uso.html">Términos de Uso</a> |
-                <a href="politica-cookies.html">Política de Cookies</a>
+             <nav class="footer-nav" aria-label="Navegación secundaria">
+                <a href="../politica-privacidad.html">Política de Privacidad</a> |
+                <a href="../terminos-uso.html">Términos de Uso</a> |
+                <a href="../politica-cookies.html">Política de Cookies</a>
             </nav>
         </div>
     </footer>
