--- a/Servicios/internet-rural.html
+++ b/Servicios/internet-rural.html
@@ -148,7 +148,7 @@
                 <div class="hero-text-content">
                     <h1>Conectividad sin Límites para Empresas Rurales en Almería</h1>
                     <p class="subtitle">En SATEKOR llevamos internet de alta velocidad y fiabilidad a su negocio en zonas rurales de Almería, donde otros no llegan. Conecte su finca, hotel rural o nave industrial.</p>
-                    <a href="contacto.html?servicio=internet-rural" class="btn btn-primary">Consultar Cobertura Rural</a>
+                    <a href="../contacto.html" class="btn btn-primary">Consultar Cobertura Rural</a>
                 </div>
             </div>
         </section>
@@ -355,7 +355,7 @@
             <div class="container">
                 <h2 class="section-title" style="color: var(--color-primary);">Conecte su Negocio Rural al Mundo Digital en Almería</h2>
                 <p class="subtitle" style="color: var(--color-text-primary);">Descubra con SATEKOR la mejor solución de internet para su empresa en el campo almeriense. Solicite un estudio de viabilidad gratuito.</p>
-                <a href="contacto.html?servicio=internet-rural" class="btn btn-primary btn-large">Estudio de Viabilidad Gratuito</a>
+                <a href="../contacto.html" class="btn btn-primary btn-large">Estudio de Viabilidad Gratuito</a>
                 <p><a href="tel:+34642531300">O llámenos al <strong>642 53 13 00</strong></a></p>
             </div>
         </section>
@@ -395,10 +395,10 @@
     <footer class="site-footer">
          <div class="container footer-content">
             <p>© <span id="current-year"></span> SATEKOR Telecomunicaciones. Todos los derechos reservados.</p>
-            <nav class="footer-nav" aria-label="Navegación secundaria">
-                <a href="politica-privacidad.html">Política de Privacidad</a> |
-                <a href="terminos-uso.html">Términos de Uso</a> |
-                <a href="politica-cookies.html">Política de Cookies</a>
+             <nav class="footer-nav" aria-label="Navegación secundaria">
+                <a href="../politica-privacidad.html">Política de Privacidad</a> |
+                <a href="../terminos-uso.html">Términos de Uso</a> |
+                <a href="../politica-cookies.html">Política de Cookies</a>
             </nav>
         </div>
     </footer>
