--- a/Servicios/mantenimiento-redes.html
+++ b/Servicios/mantenimiento-redes.html
@@ -147,7 +147,7 @@
                 <div class="hero-text-content">
                     <h1>Soporte y Mantenimiento de Telecomunicaciones 24/7 en Almería</h1>
                     <p class="subtitle">Garantice la continuidad operativa de su empresa con el servicio de mantenimiento preventivo, correctivo y soporte técnico urgente de SATEKOR para todas sus infraestructuras de red en Almería.</p>
-                    <a href="contacto.html?servicio=mantenimiento" class="btn btn-primary">Solicitar Contrato de Mantenimiento</a>
+                    <a href="../contacto.html" class="btn btn-primary">Solicitar Contrato de Mantenimiento</a>
                 </div>
             </div>
         </section>
@@ -356,7 +356,7 @@
             <div class="container">
                 <h2 class="section-title" style="color: var(--color-primary);">Mantenga sus Comunicaciones Siempre Operativas en Almería</h2>
                 <p class="subtitle" style="color: var(--color-text-primary);">No espere a tener un problema. Contacte con SATEKOR para un plan de mantenimiento adaptado a su empresa y asegure su tranquilidad.</p>
-                <a href="contacto.html?servicio=mantenimiento" class="btn btn-primary btn-large">Contactar para Mantenimiento</a>
+                <a href="../contacto.html" class="btn btn-primary btn-large">Contactar para Mantenimiento</a>
                 <p><a href="tel:+34642531300">O llámenos al <strong>642 53 13 00</strong></a></p>
             </div>
         </section>
@@ -396,10 +396,10 @@
     <footer class="site-footer">
          <div class="container footer-content">
             <p>© <span id="current-year"></span> SATEKOR Telecomunicaciones. Todos los derechos reservados.</p>
-            <nav class="footer-nav" aria-label="Navegación secundaria">
-                <a href="politica-privacidad.html">Política de Privacidad</a> |
-                <a href="terminos-uso.html">Términos de Uso</a> |
-                <a href="politica-cookies.html">Política de Cookies</a>
+             <nav class="footer-nav" aria-label="Navegación secundaria">
+                <a href="../politica-privacidad.html">Política de Privacidad</a> |
+                <a href="../terminos-uso.html">Términos de Uso</a> |
+                <a href="../politica-cookies.html">Política de Cookies</a>
             </nav>
         </div>
     </footer>
