--- a/Servicios/soluciones-iot.html
+++ b/Servicios/soluciones-iot.html
@@ -148,7 +148,7 @@
                 <div class="hero-text-content">
                     <h1>Automatización Inteligente y Soluciones IoT para su Empresa en Almería</h1>
                     <p class="subtitle">Transforme su negocio con la tecnología del Internet de las Cosas. SATEKOR diseña e implementa sistemas IoT a medida para optimizar recursos, mejorar la eficiencia y crear entornos inteligentes en Almería.</p>
-                    <a href="contacto.html?servicio=iot" class="btn btn-primary">Descubrir Soluciones IoT</a>
+                    <a href="../contacto.html" class="btn btn-primary">Descubrir Soluciones IoT</a>
                 </div>
             </div>
         </section>
@@ -355,7 +355,7 @@
             <div class="container">
                 <h2 class="section-title" style="color: var(--color-primary);">Innove y Optimice su Negocio en Almería con IoT</h2>
                 <p class="subtitle" style="color: var(--color-text-primary);">Descubra el potencial de la automatización inteligente. Contacte con SATEKOR para un asesoramiento personalizado sobre soluciones IoT.</p>
-                <a href="contacto.html?servicio=iot" class="btn btn-primary btn-large">Consultar Proyecto IoT</a>
+                <a href="../contacto.html" class="btn btn-primary btn-large">Consultar Proyecto IoT</a>
                 <p><a href="tel:+34642531300">O llámenos al <strong>642 53 13 00</strong></a></p>
             </div>
         </section>
@@ -395,10 +395,10 @@
     <footer class="site-footer">
          <div class="container footer-content">
             <p>© <span id="current-year"></span> SATEKOR Telecomunicaciones. Todos los derechos reservados.</p>
-            <nav class="footer-nav" aria-label="Navegación secundaria">
-                <a href="politica-privacidad.html">Política de Privacidad</a> |
-                <a href="terminos-uso.html">Términos de Uso</a> |
-                <a href="politica-cookies.html">Política de Cookies</a>
+             <nav class="footer-nav" aria-label="Navegación secundaria">
+                <a href="../politica-privacidad.html">Política de Privacidad</a> |
+                <a href="../terminos-uso.html">Términos de Uso</a> |
+                <a href="../politica-cookies.html">Política de Cookies</a>
             </nav>
         </div>
     </footer>
