--- a/Servicios/videovigilancia-empresas.html
+++ b/Servicios/videovigilancia-empresas.html
@@ -153,7 +153,7 @@
                 <div class="hero-text-content">
                     <h1>Videovigilancia Profesional para Empresas en Almería</h1>
                     <p class="subtitle">Proteja sus activos, personal y clientes con sistemas de cámaras de seguridad IP y CCTV de alta definición, instalación experta y monitoreo avanzado por SATEKOR.</p>
-                    <a href="contacto.html?servicio=videovigilancia" class="btn btn-primary">Solicitar Asesoramiento Gratuito</a>
+                    <a href="../contacto.html" class="btn btn-primary">Solicitar Asesoramiento Gratuito</a>
                 </div>
             </div>
         </section>
@@ -374,7 +374,7 @@
             <div class="container"> <!-- Quitamos text-center inline, se maneja por CSS -->
                 <h2 class="section-title" style="color: var(--color-primary);">Proteja su Negocio en Almería Hoy Mismo</h2>
                 <p class="subtitle" style="color: var(--color-text-primary);">Contacte con SATEKOR para un estudio de seguridad personalizado y un presupuesto sin compromiso para su sistema de videovigilancia.</p>
-                <a href="contacto.html?servicio=videovigilancia" class="btn btn-primary btn-large">Solicitar Presupuesto Ahora</a>
+                <a href="../contacto.html" class="btn btn-primary btn-large">Solicitar Presupuesto Ahora</a>
                 <p><a href="tel:+34642531300">O llámenos al <strong>642 53 13 00</strong></a></p> <!-- Puse strong en el número -->
             </div>
         </section>
@@ -418,10 +418,10 @@
     <footer class="site-footer">
          <div class="container footer-content">
             <p>© <span id="current-year"></span> SATEKOR Telecomunicaciones. Todos los derechos reservados.</p>
-            <nav class="footer-nav" aria-label="Navegación secundaria">
-                <a href="politica-privacidad.html">Política de Privacidad</a>
-                <a href="terminos-uso.html">Términos de Uso</a>
-                <a href="politica-cookies.html">Política de Cookies</a>
+             <nav class="footer-nav" aria-label="Navegación secundaria">
+                <a href="../politica-privacidad.html">Política de Privacidad</a> |
+                <a href="../terminos-uso.html">Términos de Uso</a> |
+                <a href="../politica-cookies.html">Política de Cookies</a>
             </nav>
         </div>
     </footer>
