--- a/contacto.html
+++ b/contacto.html
@@ -194,10 +194,10 @@
         <!-- ... Contenido footer sin cambios ... -->
         <div class="container footer-content">
             <p>© <span id="current-year"></span> SATEKOR Telecomunicaciones. Todos los derechos reservados.</p>
-            <nav class="footer-nav" aria-label="Navegación secundaria">
-                <a href="politica-privacidad">Política de Privacidad</a> |
-                <a href="terminos-uso">Términos de Uso</a> |
-                <a href="politica-cookies">Política de Cookies</a>
+             <nav class="footer-nav" aria-label="Navegación secundaria">
+                <a href="../politica-privacidad.html">Política de Privacidad</a> |
+                <a href="../terminos-uso.html">Términos de Uso</a> |
+                <a href="../politica-cookies.html">Política de Cookies</a>
             </nav>
         </div>
     </footer>
