--- a/Servicios/infraestructura-telecom.html
+++ b/Servicios/infraestructura-telecom.html
@@ -148,7 +148,7 @@
                 <div class="hero-text-content">
                     <h1>Infraestructura de Red Robusta y Escalable en Almería</h1>
                     <p class="subtitle">SATEKOR construye la base sólida para sus comunicaciones empresariales: cableado estructurado de alto rendimiento, racks organizados y CPDs eficientes en Almería.</p>
-                    <a href=".../contacto.html" class="btn btn-primary">Evaluar Mi Infraestructura</a>
+                    <a href="../contacto.html" class="btn btn-primary">Evaluar Mi Infraestructura</a>
                 </div>
             </div>
         </section>
