--- a/Servicios/fibra-optica-empresas.html
+++ b/Servicios/fibra-optica-empresas.html
@@ -153,7 +153,7 @@
                 <div class="hero-text-content">
                     <h1>Fibra Óptica Ultrarrápida para Empresas en Almería</h1>
                     <p class="subtitle">Impulse la productividad y competitividad de su negocio con conexiones de internet por fibra óptica fiables, veloces y escalables, instaladas por los expertos de SATEKOR.</p>
-                    <a href="contacto.html?servicio=fibra-optica" class="btn btn-primary">Consultar Cobertura y Tarifas</a>
+                    <a href="../contacto.html" class="btn btn-primary">Consultar Cobertura y Tarifas</a>
                 </div>
             </div>
         </section>
@@ -423,24 +423,7 @@
          <div class="container footer-content">
             <p>© <span id="current-year"></span> SATEKOR Telecomunicaciones. Todos los derechos reservados.</p>
             <nav class="footer-nav" aria-label="Navegación secundaria">
-                <a href="politica-privacidad.html">Política de Privacidad</a>
-                <a href="../terminos-uso.html">Términos de Uso</a><a href="../politica-privacidad.html">Política de Privacidad</a> |
-                <a href="../terminos-uso.html">Términos de Uso</a> |
-                <a href="../politica-cookies.html">Política de Cookies</a>|<a href="../politica-privacidad.html">Política de Privacidad</a> |
-                <a href="../terminos-uso.html">Términos de Uso</a> |
-                <a href="../politica-cookies.html">Política de Cookies</a>|<a href="../politica-privacidad.html">Política de Privacidad</a> |
-                <a href="../terminos-uso.html">Términos de Uso</a> |
-                <a href="../politica-cookies.html">Política de Cookies</a>|<a href="../politica-privacidad.html">Política de Privacidad</a> |
-                <a href="../terminos-uso.html">Términos de Uso</a> |
-                <a href="../politica-cookies.html">Política de Cookies</a>|<a href="../politica-privacidad.html">Política de Privacidad</a> |
-                <a href="../terminos-uso.html">Términos de Uso</a> |
-                <a href="../politica-cookies.html">Política de Cookies</a>|<a href="../politica-privacidad.html">Política de Privacidad</a> |
-                <a href="../terminos-uso.html">Términos de Uso</a> |
-                <a href="../politica-cookies.html">Política de Cookies</a>|<a href="../politica-privacidad.html">Política de Privacidad</a> |
-                <a href="../terminos-uso.html">Términos de Uso</a> |
-                <a href="../politica-cookies.html">Política de Cookies</a>|<a href="../politica-privacidad.html">Política de Privacidad</a> |
-                <a href="../terminos-uso.html">Términos de Uso</a> |
-                <a href="../politica-cookies.html">Política de Cookies</a>|<a href="../politica-privacidad.html">Política de Privacidad</a> |
+                <a href="../politica-privacidad.html">Política de Privacidad</a> |
                 <a href="../terminos-uso.html">Términos de Uso</a> |
                 <a href="../politica-cookies.html">Política de Cookies</a>
             </nav>
