ZONA DE SERVICIOS MEJOR

--- a/index.html
+++ b/index.html
@@ -184,13 +184,16 @@
 
             <!-- Tarjeta de Servicio 1: Videovigilancia -->
             <article class="service-card">
-                 <i class="fas fa-video service-icon" aria-hidden="true"></i>
-                 <h3><a href="Servicios/videovigilancia-empresas.html">Videovigilancia para Empresas en Almería</a></h3>
-                 <p>Instalación profesional de <strong>cámaras de seguridad IP, CCTV 4K y sistemas de monitoreo remoto</strong> para hoteles, naves industriales y oficinas. Cumplimos normativas y ofrecemos mantenimiento.</p>
-                 <!-- Botón Más Información -->
-                 <a href="Servicios/videovigilancia-empresas.html" class="btn btn-small">Más Información</a>
-                 <script type="application/ld+json">{ "@context": "https://schema.org", "@type": "Service", "serviceType": "Instalación de cámaras de seguridad para empresas", "name": "Videovigilancia Profesional para Empresas", "description": "Instalación de cámaras IP, CCTV 4K y monitoreo remoto para hoteles, naves industriales y oficinas en Almería.", "provider": { "@type": "LocalBusiness", "name": "SATEKOR Telecomunicaciones" }, "areaServed": { "@type": "AdministrativeArea", "name": "Almería" }, "keywords": "videovigilancia empresas almería, cámaras seguridad hoteles, cctv naves industriales almería, monitoreo remoto oficinas" }</script>
-            </article>
+     <i class="fas fa-video service-icon" aria-hidden="true"></i>
+     <h3><a href="Servicios/videovigilancia-empresas.html">Videovigilancia para Empresas en Almería</a></h3>
+     <p>Instalación profesional de <strong>cámaras de seguridad IP, CCTV 4K y sistemas de monitoreo remoto</strong> para hoteles, naves industriales y oficinas. Cumplimos normativas y ofrecemos mantenimiento.</p>
+     <a href="Servicios/videovigilancia-empresas.html" 
+        class="btn btn-small" 
+        aria-label="Conoce más sobre nuestras soluciones de videovigilancia profesional para empresas en Almería">
+        Detalles de Videovigilancia
+     </a>
+     <script type="application/ld+json">{ "@context": "https://schema.org", "@type": "Service", "serviceType": "Instalación de cámaras de seguridad para empresas", "name": "Videovigilancia Profesional para Empresas", "description": "Instalación de cámaras IP, CCTV 4K y monitoreo remoto para hoteles, naves industriales y oficinas en Almería.", "provider": { "@type": "LocalBusiness", "name": "SATEKOR Telecomunicaciones" }, "areaServed": { "@type": "AdministrativeArea", "name": "Almería" }, "keywords": "videovigilancia empresas almería, cámaras seguridad hoteles, cctv naves industriales almería, monitoreo remoto oficinas" }</script>
+</article>
 
             <!-- Tarjeta de Servicio 2: Fibra Óptica -->
             <article class="service-card">
